<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_white_corner_14"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_26"
    android:paddingLeft="@dimen/dp_30"
    android:paddingRight="@dimen/dp_30"
    android:paddingTop="@dimen/dp_36">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pop_heartbroken" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:lineSpacingMultiplier="2"
        android:text="@string/dialog_cancel_relation_tips"
        android:textColor="@color/app_3e4f6c"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/tips_again_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/dialog_cancel_relation_i_am_sure"
        android:textColor="@color/app_7e94bb"
        android:textSize="@dimen/sp_16"
        android:visibility="gone" />

    <EditText
        android:id="@+id/input_et"
        android:layout_width="200dp"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/input_bg_round_4"
        android:gravity="center"
        android:hint="@string/dialog_cancel_relation_input_hint"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/app_7e94bb"
        android:textSize="@dimen/sp_13" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14">

        <TextView
            android:id="@+id/cancle_tv"
            android:layout_width="92dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_bg_disable_round_4"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/comfirm_tv"
            android:layout_width="92dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_bg_normal_round_4"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>