<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lovecoin.ediamond.widget.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white"
        app:title="@string/activity_set_profile_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="88dp"
            android:layout_marginStart="88dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_head_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/ic_profile_avatar_edit"
                app:civ_border_width="0dp" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_46"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/app_edf3fc"
                android:gravity="center_vertical"
                android:hint="@string/str_name"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp_12"
                android:singleLine="true"
                android:textColorHint="@color/app_3e4f6c"
                android:textSize="@dimen/sp_13" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_46"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@color/app_edf3fc"
                android:orientation="horizontal"
                android:padding="@dimen/dp_2">

                <RadioButton
                    android:id="@+id/rb_gender_male"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/gender_radio_btn_selector"
                    android:button="@drawable/transparent"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/str_gender_male"
                    android:textColor="@color/gender_radio_btn_text_selector" />

                <RadioButton
                    android:id="@+id/rb_gender_female"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/gender_radio_btn_selector"
                    android:button="@drawable/transparent"
                    android:gravity="center"
                    android:text="@string/str_gender_female"
                    android:textColor="@color/gender_radio_btn_text_selector" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_46"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/btn_selector"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/str_ok"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>