<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.lovecoin.ediamond.widget.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/str_title_login" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tv_check_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/str_enter_verification_code"
            android:textColor="@color/app_3e4f6c"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_12"
            android:text="@string/str_message_has_been_sent_to"
            android:textColor="@color/app_a5aebc"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/reg_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_a5aebc"
            android:textSize="@dimen/sp_14"
            tools:text="+1111111111" />

    </LinearLayout>

    <com.lovecoin.ediamond.widget.IdentifyingCodeView
        android:id="@+id/check_code_view"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        app:icv_et_number="4"
        app:icv_et_divider_drawable="@drawable/identifying_code_divider"
        app:icv_et_text_size="18sp"
        app:icv_et_width="43dp"
        app:icv_et_text_color="@color/app_3e4f6c"
        app:icv_et_bg_focus="@color/app_edf3fc"
        app:icv_et_bg_normal="@color/app_edf3fc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout" />

    <Button
        android:id="@+id/action_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_13"
        android:background="@drawable/btn_selector"
        android:text="Complete"
        android:textColor="@color/white"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_code_view"
        app:layout_constraintWidth_percent="0.66"
        app:layout_goneMarginTop="@dimen/dp_16" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/action_btn"
        app:layout_constraintRight_toRightOf="@+id/action_btn"
        app:layout_constraintTop_toBottomOf="@+id/action_btn">

        <TextView
            android:id="@+id/check_reg_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_12"
            android:text="Click the sign up button, which means that you agree to the Love Coin network service provision"
            android:textColor="@color/app_a5aebc"
            android:textSize="@dimen/sp_13"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/check_login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/change_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sp_12"
                android:text="@string/str_change_phone_number"
                android:textColor="@color/green"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/check_count_down_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/repeate_verification_code_after_27_seconds"
                android:textColor="@color/app_a5aebc"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
