<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.lovecoin.ediamond.widget.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:title="@string/activity_pay_path_title" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_23"
        android:paddingLeft="@dimen/dp_24"
        android:paddingRight="@dimen/dp_24"
        android:paddingTop="@dimen/dp_40">

        <TextView
            android:id="@+id/order_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_quantity"
            android:textColor="@color/app_7e94bb"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/order_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/pay_purchase_price"
            android:textColor="@color/app_7e94bb"
            android:textSize="@dimen/sp_14"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/pay_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            tools:text="Diamond X 100"
            android:textColor="@color/app_3e4f6c"
            android:textSize="@dimen/sp_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_number_label" />

        <TextView
            android:id="@+id/pay_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_10"
            tools:text="$40000.00"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_18"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_price_label" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/app_f7f9fe"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_34"
            android:text="@string/pay_choose_payment_method"
            android:textColor="@color/app_7e94bb"
            android:textSize="@dimen/sp_14" />

        <RelativeLayout
            android:id="@+id/pay_path_paypal_layout"
            android:layout_width="258dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/shadow_button_white"
            android:paddingLeft="@dimen/dp_32"
            android:paddingRight="@dimen/dp_32">

            <ImageView
                android:src="@drawable/ic_paypal"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="PayPal"
                android:textColor="@color/app_3e4f6c"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
